<resources>
    <string name="app_name">EjercicioWaterTraining</string>
    <string name="btAñadir">+</string>
    <string name="add">Add</string>
    <string name="stats">Stats</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="btGuardar">Guardar</string>
    <string name="btCancelar">Cancelar</string>
    <string name="lblDistancia">Distancia</string>
    <string name="pistaDistancia">kilometros...</string>
    <string name="lblTiempo">Tiempo</string>
    <string name="pistaTiempo">Minutos...</string>
</resources>
