<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_item_edition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ejerciciowatertraining.ui.EntrenamientoEditionActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/lblDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/pistaDistancia"
            android:layout_weight="1"
            android:hint="@string/pistaDistancia"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".45"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/lblTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTiempo"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:ems="10"
            android:id="@+id/pistaTiempo"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:hint="@string/pistaTiempo"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:gravity="right|center_vertical">

        <Button
            android:text="@string/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelar"
            android:layout_weight="1" />

        <Button
            android:text="@string/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGuardar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>